2018-11-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (TimeImageCommand): Time command now shows 6
	digits of elapsed time indication since this precision is often
	now available and it is useful to see.

2018-11-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Magick++/lib/Magick++/Drawable.h: Fix use of clang diagnostic
	syntax. Addresses SourceForge bug #579 "'diagnostic pop' pragma
	without 'diagnostic push' in Drawable.h.".

2018-11-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/constitute.c (WriteImage): Eliminate use of just-freed
	memory in clone_info->magick when throwing exception due to no
	support for format.  Fixes SourceForge issue #576 "heap
	use-after-freee when convert one format into another format".

	* magick/command.c (BenchmarkImageCommand): Benchmark command now
	shows 6 digits of elapsed time indication since this precision is
	often now available and it is useful to see.

2018-11-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand/wand_api.h ("C"): magick/api.h should be included prior to
	wand/wand_symbols.h.  Change made due to report by yzh杨振宏 on
	Wed, 21 Nov 2018 via the graphicsmagick-bugs mailing list.

2018-11-20  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* magick/nt_base.c Fix a bug when OS does not support performance counter.

2018-11-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/nt_base.c (NTElapsedTime): Use
	QueryPerformanceFrequency() and QueryPerformanceCounter() to
	measure elapsed time for Windows.

2018-11-19  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* tiff/port/snprintf.c Fix for older Microsoft Visual Studio

2018-11-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/index.rst: Update in preparation for 1.3.31 release.

	* version.sh: Update library versioning in preparation for
	1.3.31 release.

	* NEWS.txt: Update news in preparation for 1.3.31 release.

2018-11-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
