@@ -38,8 +38,8 @@ extern "C" {
 #define MagickLibVersion  0x221900
 #define MagickLibVersionText  "1.4"
 #define MagickLibVersionNumber 22,19,0
-#define MagickChangeDate   "20181130"
-#define MagickReleaseDate  "snapshot-20181130"
+#define MagickChangeDate   "20181201"
+#define MagickReleaseDate  "snapshot-20181201"
 	
 /*
   The MagickLibInterfaceNewest and MagickLibInterfaceOldest defines
