@@ -1,3 +1,8 @@
+2018-12-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* fuzzing/oss-fuzz-build.sh (PKG_CONFIG_PATH): Build WebP prior to
+	libtiff so that libtiff has a chance to find it.
+
 2018-11-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* magick/command.c (TimeImageCommand): Time command now shows 6
